--- a/weekly-daily/week1/day1/room-web-app/src/main/resources/application.properties
+++ b/weekly-daily/week1/day1/room-web-app/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.application.name=room-web-app
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database=postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5332/local
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.h2.console.path=/h2-console
