docs: create StudentRepository

--- a/springdblearning/src/main/resources/application.properties
+++ b/springdblearning/src/main/resources/application.properties
@@ -6,5 +6,9 @@ spring.datasource.username=mrlii
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=true 
+spring.jpa.show-sql=true
+
+logging.level.com.springdblearning=DEBUG
+logging.level.org.hibernate.SQL=DEBUG 
