--- a/springsecurity/spring-6-spring-security/admin-web/src/main/resources/application.properties
+++ b/springsecurity/spring-6-spring-security/admin-web/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=admin-web
 spring.jpa.hibernate.ddl-auto=none
 server.error.whitelabel.enabled=false
+
+spring.sql.init.mode=always
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
